<resources>
    <string name="app_name">HobbiVenture</string>
    <string name="title_home">Home</string>
    <string name="title_survey">Survey</string>
    <string name="title_search">Search</string>
    <string name="category1">Category1</string>
    <string name="category2">Category2</string>
    <string name="category3">Category3</string>
    <string name="category4">Category4</string>
    <string name="category5">Category5</string>
    <string name="category6">Category6</string>
    <string name="event1">Event1</string>
    <string name="event2">Event2</string>
    <string name="event3">Event3</string>
    <string name="event4">Event4</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="place_name">PlaceName</string>
    <string name="place_image">PlaceImage</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="yes">yes</string>
    <string name="not_sure">Not sure</string>
    <string name="Question1">Question1</string>
    <string name="Question2">Question2</string>
    <string name="Question3">Question3</string>
    <string name="Question4">Question4</string>
    <string name="Next">Next</string>
    <string name="no">No</string>
    <string name="savebutton">SaveButton</string>
    <string name="submit">Submit</string>
    <string name="results">Results</string>
    <string name="back_to_survey">Back to survey</string>
</resources>